--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+    height: 80%;
     width: 800px;
     margin: 0 auto;
     display: flex;
@@ -26,6 +27,7 @@ body {
 h1  {
     font-size: xxx-large;
     font-weight: 200;
+    margin-top: 90px;
 }
 
 input {
