--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 }
 
 .container {
-    height: 80%;
     width: 800px;
     margin: 0 auto;
     display: flex;
@@ -27,7 +26,6 @@ body {
 h1  {
     font-size: xxx-large;
     font-weight: 200;
-    margin-top: 90px;
 }
 
 input {
@@ -69,6 +67,11 @@ h2 {
     width: 300px;
 }
 
+h4 {
+    font-size: 30px;
+    color: #000;
+}
+
 .data {
     display: flex;
     flex-direction: column;
@@ -82,4 +85,9 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+img {
+    position: absolute;
+    left: 105px;
 }
